fix: Handle circular ICS references without stackoverflow
There are two listings in our database that reference each other
(listingA specifies listingB as its parent and listingB specifies
listingA as its parent). This was causing a stack overflow during
generational ICS surveillance calculations.

[#OCD-4107]